<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/taskTitleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <DatePicker
            android:id="@+id/deadlinePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/taskTitleEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/addSimpleTaskButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_simple_task_title"
            app:layout_constraintTop_toBottomOf="@id/deadlinePicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/addDeadlineTaskButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_deadline_task_title"
            app:layout_constraintTop_toBottomOf="@id/addSimpleTaskButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/sortByTitleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_title"
            app:layout_constraintTop_toBottomOf="@id/addDeadlineTaskButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/sortByDeadlineButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_deadline_title"
            app:layout_constraintTop_toBottomOf="@id/sortByTitleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tasksTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/tasks_will_be_displayed_here_hint"
            app:layout_constraintTop_toBottomOf="@id/sortByDeadlineButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>