<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flyweight_and_decorator.FlyweightFragment"
    android:id="@+id/flyweightFragment">

    <Button
        android:id="@+id/buttonCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_circle_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_square_title"
        app:layout_constraintTop_toBottomOf="@id/buttonCircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonCircleWithBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_circle_with_border_title"
        app:layout_constraintTop_toBottomOf="@id/buttonSquare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSquareWithBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_square_with_border_title"
        app:layout_constraintTop_toBottomOf="@id/buttonCircleWithBorder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>